Bug with invisible date fixed

--- a/src/components/EventCard/EventCard.module.css
+++ b/src/components/EventCard/EventCard.module.css
@@ -4,7 +4,6 @@
   width: 100%;
   height: 336px;
   overflow: hidden;
-  z-index: 1;
 }
 
 .imageThumb > img {
